--- a/templates/settings.html
+++ b/templates/settings.html
@@ -39,6 +39,15 @@
                    advanced_logging %}checked{% endif %}>
             <label class="form-check-label" for="advanced_logging">Enable Advanced Logging</label>
         </div>
+        <a href="{{ url_for('download_data') }}" class="btn btn-primary my-3">Download All Data</a>
+
+        <!-- Form to upload data -->
+        <form action="{{ url_for('upload_data') }}" method="post" enctype="multipart/form-data">
+            <div class="input-group my-3">
+                <input type="file" name="data_file" accept=".zip" class="form-control" required>
+                <button type="submit" class="btn btn-secondary">Upload Data</button>
+            </div>
+        </form>
         <button type="submit" class="btn btn-primary">Save Settings</button>
     </form>
 
